[package]
name = "okx"
version = "0.1.0"
edition = "2024"

[lib]
name = "okx"
path = "src/lib.rs"

[[bin]]
name = "okx"
path = "src/bin/okx.rs"

[[bin]]
name = "ok"
path = "src/bin/ok.rs"

[dependencies]
anyhow = "1.0"
clap = { version = "4.4", features = ["derive"] }
clap_complete = "4.4"
dialoguer = { version = "0.11", features = ["fuzzy-select"] }
dirs = "6.0"
fuzzy-matcher = "0.3"
mime_guess = "2"
open = "5.3"
rusqlite = { version = "0.31", features = ["bundled"] }
